--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     text-align: center;
     font-family: "Lavishly Yours";
     font-weight: 100;
-    background: linear-gradient(#ff4f8a 0%, transparent 80%);
+    background: linear-gradient(#ff4f8a 0%, #ff4f8a 45%, transparent 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -76,7 +76,7 @@ body {
     width: 350px;
     height: 330px;
     align-self: end;
-    margin-left: 100px;
+    margin-left: 75px;
     margin-bottom: 10px;
 }
 
@@ -94,8 +94,12 @@ body {
     padding: 40px;
     border: 3px dashed #ff4bb5;
     border-radius: 10px;
-    font-size: 30px;
-    font-family: "Brush Script MT", cursive;
+    display: grid;
+}
+
+.loichuc {
+    font-size: 50px;
+    font-family: "Lavishly Yours";
     line-height: 1.4;
     text-align: center;
     align-self: center;
@@ -115,6 +119,7 @@ body {
     margin-right: 60px;
     display: flex;
     flex-direction: row;
+    align-self: end;
     gap: 15px;
 }
 
