--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ body {
         transform: scale(0.5);
         transform-origin: top center;
         margin: 0 auto;
+        margin-left: 25px;
     }
 }
 
