--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@
 }
 
 @media (max-width: 600px) {
-    .container {
+    .body {
         transform: scale(0.5);
         transform-origin: top center;
         margin: 0 auto;
